# aion-dl

./: PKGBUILD  README.md  install.sh  pyproject.toml  requirements.txt
assets/: aion-dl.desktop
src/aion_dl/: __init__.py  config.py  downloader.py  main.py  models.py  style.css  window.py
src/aion_dl/widgets/: __init__.py  download_row.py  format_panel.py  history_page.py  settings_page.py  url_bar.py
